--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,24 +12,30 @@ VERSION:	Versoin Number
 [TABLE OF CONTENTS]
 -------------------------------------------------------------------*/
 
-@import 'variables';
+@import "variables";
 
-@import 'mixins';
+@import "mixins";
 
-@import 'typography';
+@import "typography";
 
-@import 'buttons';
+@import "buttons";
 
-@import 'common';
+@import "common";
 
-@import 'templates/navigation';
+@import "templates/navigation";
 
-@import 'templates/hero-area';
+@import "templates/hero-area";
 
-@import 'templates/homepage';
+@import "templates/homepage";
 
-@import 'templates/blog';
+@import "templates/blog";
 
-@import 'templates/about';
+@import "templates/about";
 
-@import 'templates/portfolio';
+@import "templates/portfolio";
+
+@font-face {
+  font-family: "bitbit";
+  src: url("/assets/fonts/DNFBitBitv2.ttf") format("truetype");
+  src: url("/assets/fonts/DNFBitBitv2.otf") format("opentype");
+}
